Closed
Bug 454959
Opened 17 years ago
Closed 17 years ago
Scrollbar in Mac toolbar customization panel no longer scrolls content
Categories
(Core :: Web Painting, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b3
People
(Reporter: philor, Assigned: roc)
References
Details
(Keywords: regression, verified1.9.1)
Attachments
(1 file)
|
4.15 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. In a fresh clean profile, in a Mac Firefox or Thunderbird from 2008-09-06 or later, right click an empty part of the toolbar, select Customize...
2. Drag something off the toolbar (the Home button is a good choice to trash) and drop it in the panel so you'll get a vertical scrollbar.
3. Try to scroll, with a two-finger drag, or dragging the thumb, or clicking in the well, or clicking the arrow buttons. The scrollbar thumb will move, but the content stays still.
It wasn't going to be my first choice, but according to hg bisect, "The first bad revision is: changeset: 18882:5b69c1cd5976 [...] Bug 442291."
Flags: blocking1.9.1?
Comment 1•17 years ago
|
||
This appears to be OS-X-only: With today's mozilla-central nightly,
it happens on OS X but not on Windows or Linux.
On Windows and Linux you don't need to drag anything off the toolbar
to test this -- if the Customize Toolbar dialog doesn't have a
scrollbar, you can resize it to give it one.
Comment 2•17 years ago
|
||
Adding status whiteboard so the Thunderbird 3 folks can track core bugs we need.
Whiteboard: [tb3needs]
| Reporter | ||
Comment 3•17 years ago
|
||
Making a random guess at a better component, since even though the regressing bug was in Gfx: Thebes, the patch was all in view/. Being Mac-only doesn't necessarily make it Mac-code-only, since the other platforms use a dialog for customization, and Mac uses a <panel>. Nudging up the severity too, since even though a workaround exists (drag a visible item, drop it on the toolbar, then drag it back to the panel, it goes to the end of the list, cycling hidden things into view), it ain't obvious.
Severity: normal → major
Component: General → Layout: View Rendering
QA Contact: general → layout.view-rendering
Hardware: PC → All
Whiteboard: [tb3needs]
Comment 5•17 years ago
|
||
This basically ruins toolbar customisation, blocks.
Oddly While scrolling the mouse slowly does nothing if I make a sudden jump with the wheel I can still scroll the content.
Flags: blocking1.9.1? → blocking1.9.1+
Comment 6•17 years ago
|
||
roc: any ideas what might be causing this?
Comment 7•17 years ago
|
||
After scrolling down, even if it appears that the contents didn't scroll, you can drag the correct buttons (the ones that would've shown up) onto the toolbar.
| Assignee | ||
Comment 9•17 years ago
|
||
Apparently the UpdateView(this, NS_VMREFRESH_DEFERRED) calls are not doing anything so the pane is not repainted. I've no idea why. The frame positions *are* being updated, because if you force a repaint by other means it paints correctly.
| Assignee | ||
Comment 10•17 years ago
|
||
Hmm, the sheet's RootViewManager is the view manager for the outer chrome document. That's Not Good.
| Assignee | ||
Comment 11•17 years ago
|
||
OK, I see that on Mac, the toolbar customization dialog is implemented as an iframe inside a popup <panel>. That's crazy.
| Assignee | ||
Comment 12•17 years ago
|
||
This fixes it. We're invalidating the root of the root view manager, which isn't working since we're in a floating-view situation. We don't realize we're in a floating-view situation since floating-ness doesn't propagate across view manager boundaries. We still find the correct display-root though, so let's just use that.
Attachment #347703 -
Flags: superreview?(bzbarsky)
Attachment #347703 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs review]
Comment 13•17 years ago
|
||
Comment on attachment 347703 [details] [diff] [review]
fix
r+sr=bzbarsky. I wish we could write tests for this stuff. :(
Attachment #347703 -
Flags: superreview?(bzbarsky)
Attachment #347703 -
Flags: superreview+
Attachment #347703 -
Flags: review?(bzbarsky)
Attachment #347703 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs review] → [needs landing]
| Assignee | ||
Updated•17 years ago
|
Priority: -- → P1
Comment 14•17 years ago
|
||
So, this is marked blocking1.9.1+ and a P1. Since it's also not targeted at b2 milestone, I want to make sure we're intentionally saying that we do *not* need a beta for this.
So, does this require a beta vector?
| Assignee | ||
Comment 15•17 years ago
|
||
I don't think so.
Landed on mozilla-central (and thus also on mozilla-1.9.1):
http://hg.mozilla.org/mozilla-central/rev/48481020e517
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla1.9.1b3
Updated•17 years ago
|
Keywords: fixed1.9.1
Comment 18•17 years ago
|
||
I can confirm same problem here. (Running Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b2) Gecko/20081201 Firefox/3.1b2 ID:20081201061100).
Customize tool bar window doesn't scroll the content; however, if you click on the scrollbar, it does move...)
Comment 19•17 years ago
|
||
verified fixed on the 1.9.1 branch using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b3pre) Gecko/20090106 Shiretoko/3.1b3pre
verified fixed on the trunk using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090106 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•