Bug 454959. When a document is in a floating view, floating-ness doesn't propagate across view manager boundaries. So use the display-root view as the place to invalidate from. r+sr=bzbarsky